    - Avoid leaking shibd sockets to child processes.
  * Add NEWS entry for the authentication directive changes.
  * Update README.Debian instructions to add AuthType None to the URLs
    that have to be available to everyone and to use Require shib-session
    instead of Require valid-user.
  * Create /var/cache/shibboleth on install and remove it on purge.

 -- Russ Allbery <rra@debian.org>  Tue, 18 Jun 2013 11:13:01 -0700

shibboleth-sp2 (2.5.1+dfsg-1) experimental; urgency=low

  * New upstream release.  (Closes: #685069)
    - Support for Apache 2.4.  Please note there are some configuration
      incompabilities between Apache 2.4 and Apache 2.2.  See the upstream
      documentation at
      https://wiki.shibboleth.net/confluence/display/SHIB2/NativeSPApacheConfig
      for more information.  (Closes: #666804)
    - Disable the PKCS 1.5 algorithm for SAML assertion encryption by
      default for security reasons.  This can be re-enabled if necessary
      in the security-policy.xml configuration file.
    - The protocol between the Apache module and shibd has changed.  shibd
      will be restarted during upgrades, but if the module is configured
      to talk to a remote shibd over TCP, both the module and shibd must
      be upgraded at the same time.
    - Settings to limit redirections have been renamed from
      relayStateLimit and relayStateWhitelist to redirectLimit and
      redirectWhitelist respectively and the old names are deprecated (but
      still supported).
    - cookieProps has been simplified and warnings introduced if SSL
      restrictions are not enabled.
    - The <AttributeExtractor> element that loads the attribute-map.xml
      file now defaults to reloadChanges="false".  Restarting the SP when
      this file changes is recommended for security reasons.
    - Logging properties have been removed from the default configuration
      file and the absence of properties now indicates use of the default