@@ -10,13 +10,15 @@ shibauthorizer_SOURCES = shibauthorizer.cpp
 shibauthorizer_CXXFLAGS = $(FASTCGI_INCLUDE)
 shibauthorizer_LDFLAGS = $(FASTCGI_LDFLAGS)
 shibauthorizer_LDADD = $(FASTCGI_LIBS) \
-  $(top_builddir)/shibsp/libshibsp-lite.la
+  $(top_builddir)/shibsp/libshibsp-lite.la \
+  $(LITE_LIBS)
 
 shibresponder_SOURCES = shibresponder.cpp
 shibresponder_CXXFLAGS = $(FASTCGI_INCLUDE)
 shibresponder_LDFLAGS = $(FASTCGI_LDFLAGS)
 shibresponder_LDADD = $(FASTCGI_LIBS) \
-  $(top_builddir)/shibsp/libshibsp-lite.la
+  $(top_builddir)/shibsp/libshibsp-lite.la \
+  $(LITE_LIBS)
 
 endif
 
